--- a/locales/en.json
+++ b/locales/en.json
@@ -54,13 +54,15 @@
     "options_paypal": "Make a donation",
     "options_discord": "Discord",
     "options_options": "Options",
-    "options_language": "Language",
     "options_localData": "Local data",
     "options_exportSave": "Copy",
     "options_downloadSave": "Download",
     "options_importSave": "Import",
     "options_wipeSave": "Wipe",    
-
+    "options_settings": "Settings",
+    "options_showLocked": "Show locked content",
+    "options_showCompleted": "Show completed milestones",
+	
     "page_buildings": "Buildings",
     "page_milestones": "Milestones",
     "page_options": "Options",
@@ -71,6 +73,7 @@
 	"word_count": "Count",
 	"word_generators": "Generators",
 	"word_inputs": "Inputs",
+	"word_locked": "Locked",
 	"word_manuals": "Handcrafting",
 	"word_outputs": "Outputs",
 	"word_prod": "Prod",
