--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,5 +1,5 @@
 {
-    "game_title": "Factory Lab",
+    "game_title": "FG Factory",
 
     "loading_text": "Initializing game...",
 
@@ -25,18 +25,15 @@
 	"word_handcrafting": "Handcrafting",
     "word_import": "Import",
 	"word_kofi": "Kofi",
-	"word_machine": "Machine",
 	"word_options": "Options",
 	"word_patreon": "Patreon",
 	"word_pause": "Pause",
 	"word_paypal": "Paypal",
-	"word_production": "Production",
-	"word_recipe": "Recipe",
+	"word_production": "Automation",
 	"word_resume": "Resume",
 	"word_start": "Start",
 	"word_stop": "Stop",
 	"word_storage": "Storage",
-	"word_storer": "Storer",
 	"word_timePlayed": "Time played",
 	"word_unassign": "Unassign",
     "word_wipe": "Wipe",
@@ -62,14 +59,16 @@
 			"sc1_plastic": "Plastic",
 			"sc1_sulfur": "Sulfur",
 			"sc1_acid": "Acid",
+			"sc1_battery": "Battery",
 			"sc1_heavy_oil": "Heavy oil",
 			"sc1_light_oil": "Light oil",
 			"sc1_solid_fuel": "Solid fuel",
 			"sc1_lubricant": "Lubricant",
 		"sc1_entry_products": "Products",
-			"sc1_circuit": "Circuit",
 			"sc1_engine_1": "Engine",
 			"sc1_engine_2": "Electric engine",
+			"sc1_concrete": "Concrete",
+			"sc1_circuit": "Circuit",
 			"sc1_rocket_fuel": "Rocket fuel",
 			"sc1_rocket_part": "Rocket part",
 			
@@ -89,6 +88,7 @@
 			"sc1_furnace": "Furnace",
 			"sc1_refinery": "Refinery",
 			"sc1_chemical_plant": "Chemical plant",
-			"sc1_assembler": "Assembler",
+			"sc1_assembler_1": "Assembler 1",
+			"sc1_assembler_2": "Assembler 2",
 			"sc1_rocket_silo": "Rocket silo",
 }
