--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -25,15 +25,18 @@
     "import_corrupted": "Data corrupted!",
 	
 	"word_assign": "Assign",
+	"word_assignment": "Assignment",
 	"word_available": "Available",
 	"word_complete": "Complete",
 	"word_costs": "Costs",
+	"word_crafting": "Crafting",
 	"word_discord": "Discord",
     "word_download": "Download",
     "word_export": "Copy",
 	"word_handcrafting": "Handcrafting",
     "word_import": "Import",
 	"word_kofi": "Kofi",
+	"word_manual": "Handcrafting",
 	"word_missions": "Missions",
 	"word_options": "Options",
 	"word_patreon": "Patreon",
